--- a/styles/style.css
+++ b/styles/style.css
@@ -12,21 +12,75 @@
 
 body {
   font-family: "Rubik";
-  margin: 0;
-  padding: 0;
 }
 
 a:visited {
   text-decoration: none;
 }
 
+/* --------------- COLOR -----------------------*/
+
+:root {
+  --main-color: #0fbcf9;
+  --secondary-color: #064b64;
+  --dark-color: #171d1c;
+  --light-gray: #dbdbdb;
+}
+
+
+
+/*---------------------OTHER---------------------*/
+
+.bi {
+  font-size: 1.5rem;
+  color: var(--light-gray);
+}
+
+.bi:hover {
+  color: var(--main-color);
+}
+
+.carousel-item {
+  height: 27rem;
+  background: #000;
+  color: #fff;
+  position: relative;
+  background-position: center;
+  background-size: cover;
+}
+
+.carousel-container {
+display: flex;
+justify-content: space-between;
+align-content: center;
+}
+
+.carousel-img {
+  top: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  opacity: 0.5;
+}
+/*------------------- Backgrounds ----------------------------*/
+
+.bg-gray {
+  background-color: var(--light-gray);
+}
 /* ------------------- Header ------------------- */
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+header a {
+  color: var(--dark-color) !important;
+}
+
+header a:hover {
+  color: var(--main-color) !important;
+}
+
+header a:visited{
+  color: var(--dark-color);
 }
 
 h1 {
@@ -35,68 +89,46 @@ h1 {
   color: #171d1c;
 }
 
-#title {
-  flex-direction: column;
-  line-height: 10px;
-}
-
-header li {
-  display: inline-block;
-  margin: 20px;
-}
-
 header h1 a,
 header h1 a:visited {
   text-decoration: none;
-  color: #171d1c;
+  color: var(--dark-color);
 }
-.login-btn,
-.login-btn:visited {
-  border: solid 2px #0fbcf9;
-  padding: 15px;
-  border-radius: 1rem;
+
+.special-btn {
+  border: solid 2px var(--main-color) !important;
+  border-radius: 0.3rem !important;
   transition: all 0.5s ease;
-  color: #171d1c;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
 }
 
 header a:hover,
-.login-btn:hover {
-  color: #0fbcf9;
+.special-btn:hover {
+  color: var(--main-color);
 }
 
-.login-btn:hover {
+.special-btn:hover {
   transform: scale(1.05);
 }
 
 /* ------------------- Header ------------------- */
 
 /* ------------------- Hero ------------------- */
-.hero {
-  margin: 0 auto;
-  padding: 15px;
-  max-width: 1200px;
-}
 
-main {
+/* main {
   display: flex;
   flex-direction: row;
   margin-top: 50px;
   align-content: center;
   height: 70vh;
-}
+} */
 
 h2 {
   font-size: 3rem;
-  line-height: 2.5rem;
 }
 
-main aside {
-  max-width: 50%;
-}
-
-main img {
-  max-width: 150%;
-  min-width: 400px;
+.img-float {
   animation: float 3s ease-in-out infinite;
 }
 
@@ -106,30 +138,26 @@ main img {
   }
 }
 
-main p {
-  font-size: 150%;
-  margin-bottom: 8%;
-}
-
-.main-btn {
+.button-type-1 {
   padding: 15px;
-  border: solid #0fbcf9 2px;
+  border: solid var(--main-color) 2px;
   border-radius: 5px;
   text-decoration: none;
   font-size: 16px;
   font-weight: bold;
-  color: #0fbcf9;
+  color: var(--main-color);
   margin-right: 20px;
 }
 
-#cadastro-btn {
-  background-color: #0fbcf9;
+.button-type-1-style {
+  background-color: var(--main-color);
   color: #fff;
 }
 
-#cadastro-btn:hover {
-  background-color: #064b64;
-  border: solid #064b64 2px;
+.button-type-1-style:hover {
+  background-color: var(--secondary-color);
+  border: solid var(--secondary-color) 2px;
+  color: #fff;
 }
 
 /* ------------------- Hero ------------------- */
@@ -139,6 +167,7 @@ main p {
   background: #dbdbdb;
   width: 100%;
   padding: 5% 0;
+  margin-bottom: 4.5rem;
   display: block;
   align-items: center;
 }
@@ -178,6 +207,18 @@ main p {
 /* ------------------- Footer ------------------- */
 
 footer {
+  color: #fff;
+}
+
+footer a{
+  color: var(--light-gray) !important;
+}
+
+footer a:hover {
+  color: #fff !important;
+}
+
+/* footer {
   background: #000;
   padding: 15px;
   height: auto;
@@ -219,3 +260,4 @@ footer a li:hover {
   text-decoration: underline;
   color: rgb(220, 216, 216);
 }
+ */
