--- a/styles/style.css
+++ b/styles/style.css
@@ -218,6 +218,62 @@ footer a:hover {
   color: #fff !important;
 }
 
+
+
+/* ------------------- Início FAQ ------------------- */
+#FAQ{
+  background-color:white;
+  border: 30PX;
+  width: 80%;
+  margin-left: 50%;
+  transform: translate(-50%);
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  padding: 3%;
+  box-shadow: inset 0 0 black
+
+}       
+.Pergunta{
+   background-color: #eee;
+   color: #444;
+   cursor: pointer;
+   padding: 18px;
+   width: 100%;
+   text-align: justify;
+   border: none;
+   outline:none; 
+   border-radius: 2rem;
+   transition: 0.4s;
+   font-size: 20px;            
+}
+  .active, .Pergunta:hover{
+    background-color: #ccc;
+   color: #0fbcf9;
+   cursor: pointer;
+   padding: 18px;
+   width: 100%;
+   text-align: justify;
+   border: none;
+   outline: none; 
+   border-radius: 2rem;
+   transition: 0.4s;
+   font-size: 30px;   
+}
+
+.resposta{
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+  font-size: 17px;
+}
+
+
+/* ------------------- fim FAQ ------------------- */
+
+
+
 /* footer {
   background: #000;
   padding: 15px;
